--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import '~bootstrap/dist/css/bootstrap.css';
+/* @import '~bootstrap/dist/css/bootstrap.css';*/
 
 body {
   background-color: #f8f9fa;
@@ -6,7 +6,9 @@ body {
 }
 
 .navbar {
-  background-color: #343a40;
+  background-color: #044ea2;
+  background: #044ea2;
+  justify-items: right;
 }
 
 .navbar-brand {
@@ -20,10 +22,15 @@ body {
 
 .container {
   margin-top: 20px;
+  background-color: #044ea2;
+  align-items: end;
+  justify-items: flex-end;
 }
 
 .form-group {
   margin-bottom: 20px;
+  align-items: end;
+  text-align: right;
 }
 
 .btn {
